feat(BCNCTT-12): Updated components for testing
